# navfield

./: .clangd  .dockerignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  PLAN.md  PROBLEM.md  README.md  cpp_style_guide.md  docker-compose.yml
cmake/: depthai_bootstrap.cmake
config/: camera.json  default.json
src/: camera_config.hpp  main.cpp  view_rgb.cpp  view_stereo.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
